:sparkles: add tailwind typography

--- a/_content/posts/2022-05-27-hello-world.mdx
+++ b/_content/posts/2022-05-27-hello-world.mdx
@@ -8,4 +8,6 @@ draft: true
 
 ~~hello~~ _mdx_ hello `code`
 
-![hello!](./logo.png)
+![hello!](./logo.png "This is my profile character")
+
+![hello2!](https://avatars.githubusercontent.com/u/48559454 "This is my profile character")
