:sparkles: add codehike

--- a/_content/posts/2022-05-27-hello-world.mdx
+++ b/_content/posts/2022-05-27-hello-world.mdx
@@ -8,6 +8,14 @@ draft: true
 
 ~~hello~~ _mdx_ hello `code`
 
+```ts hello.ts
+const add: (a: number, b: number) => number = (a, b) => a + b;
+```
+
+```ts hello.ts
+const add: (a: number, b: number) => number = (a, b) => a + b;
+```
+
 ![hello!](./logo.png "This is my profile character")
 
 ![hello2!](https://avatars.githubusercontent.com/u/48559454 "This is my profile character")
