:sparkles: add simple Header

--- a/_content/posts/2022-05-27-hello-world.mdx
+++ b/_content/posts/2022-05-27-hello-world.mdx
@@ -1,16 +1,11 @@
 ---
 title: "Hello World"
 tags: []
-draft: true
 ---
 
 # hello world!
 
-~~hello~~ _mdx_ hello `code`
-
-```ts hello.ts
-const add: (a: number, b: number) => number = (a, b) => a + b;
-```
+~~hello~~ _mdx_ hello `code` 🎉
 
 ```ts hello.ts
 const add: (a: number, b: number) => number = (a, b) => a + b;
