--- a/_content/posts/2022-05-27-hello-world.mdx
+++ b/_content/posts/2022-05-27-hello-world.mdx
@@ -11,8 +11,6 @@ tags: []
 const add: (a: number, b: number) => number = (a, b) => a + b;
 ```
 
-![hello!](./logo.png "This is my profile character")
-
-![hello!](./logo.svg "This is my profile character")
+![hello!](../profile.png "This is my profile character")
 
 ![hello2!](https://avatars.githubusercontent.com/u/48559454 "This is my profile character")
